fixing sort, added table spacing fixed station name,

--- a/MMM-WienerLinien.css
+++ b/MMM-WienerLinien.css
@@ -5,3 +5,8 @@
 .MMM-WienerLinien .centered {
     text-align: center;
 }
+
+.MMM-WienerLinien .table {
+    border-spacing: 10px 0px;
+    border-collapse: separate;
+}
